--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,6 @@
 DJANGO_SETTINGS_MODULE = applyonline.config
 DJANGO_CONFIGURATION = Local
 DJANGO_SECRET_KEY = superSecretKey
-addopts = --nomigrations --cov=. --cov-report=html -v -s
+python_files = tests/*.py test_*.py
+ignore = wsgi.py migrations/*.py conftest.py
+addopts = --nomigrations --cov=. --cov-report=html -v -s -l
