--- a/requirements.txt
+++ b/requirements.txt
@@ -48,3 +48,8 @@ pytest-cov==2.6.0
 django-storages==1.7.1
 boto3==1.9.47
 
+# Field history
+django-field-history==0.7.0
+
+# dateutil
+python-dateutil==2.7.5
