Add static assets

--- a/front/angular.json
+++ b/front/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "ngx-build-plus:build",
           "options": {
-            "outputPath": "dist/front",
+            "outputPath": "../static/front",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
