--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ djangorestframework==3.9.0
 Markdown==3.0.1
 django-filter==2.0.0
 drf-schema-adapter==0.9.77
+djangorestframework-jwt==1.11.0
 
 # Developer Tools
 ipdb==0.11
