--- a/requirements.txt
+++ b/requirements.txt
@@ -24,9 +24,10 @@ django_unique_upload==0.2.1
 # Rest apis
 djangorestframework==3.9.0
 Markdown==3.0.1
-django-filter==2.0.0
+#django-filter==2.0.0
 drf-schema-adapter==0.9.77
 djangorestframework-jwt==1.11.0
+djangorestframework-filters==0.10.2.post0
 
 # Developer Tools
 ipdb==0.11
