--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.black]
-line-length = 110
+line-length = 93
 include = '\.pyi?$'
 exclude = '''
 /(
@@ -12,5 +12,6 @@ exclude = '''
   | buck-out
   | build
   | dist
+  | applyonline/aofront
 )/
 '''
