Ignore frontend directory for pytest

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,5 +3,6 @@ DJANGO_SETTINGS_MODULE = applyonline.config
 DJANGO_CONFIGURATION = Local
 DJANGO_SECRET_KEY = superSecretKey
 python_files = tests/*.py test_*.py
+norecursedirs=applyonline/aofront
 ignore = wsgi.py migrations/*.py conftest.py
 addopts = --nomigrations --cov=. --cov-report=html -v -s -l
